--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+
+.starship{ 
+
+
+  width: 200px;
+  border-radius: 0%;
+  background-size: 100% 100%;
+  background-position: center;
+  background-color: rgba(44, 62, 80,.5);
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+  background-repeat: no-repeat;
+
+}
+/* display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-between;
+border: 1px solid black;
+border-radius: 8px;
+padding: 30px;
+height: 80px;
+width:80px;
+background-color: rgb(0, 126, 109);
+} */
+.starship .name {
+  font-family: 'Cutive', sans-serif, italic;
+  font-weight: bold;
+  font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.starship .property {
+  display: block;
+} 
+
+.starship .box {
+  display: inline-block;
+  height: 200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.starship .box-text {
+  width: 400px;
+  color: #fff;
+  background: rgba(1,1,1,.5);
+  padding-left: 24px;
+}
+
+.starship.box-image {
+  /* width: 200px;
+  border-radius: 0%;
+  background-size: 100% 100%;
+  background-position: center;
+  background-color: rgba(44, 62, 80,.5);
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+  background-repeat: no-repeat; */
+}
+
+  .starship .box {
+    width: 100%;
+    display: block;
+    padding: 10px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.planets{
+  width: 200px;
+  border-radius: 0%;
+  background-size: 100% 100%;
+  background-position: center;
+  background-color: rgba(44, 62, 80,.5);
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+  background-repeat: no-repeat;
 }
